<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main" >

    <TextView
        android:id="@+id/tvMainInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/instruction_main" />

    <Button
        android:id="@+id/bJavaActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_java_activity" />

    <Button
        android:id="@+id/bNativeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bJavaActivity"
        android:layout_centerHorizontal="true"
        android:text="@string/button_native_activity" />

</RelativeLayout>
